# poolparty-statetracker

./: .gitignore  CITATION.cff  README.md  pyproject.toml
poolparty/: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
poolparty/benchmarks/: README.md  benchmark.TestDeletionScan.results.csv  benchmark.TestMutagenize.results.csv  benchmark_base_ops.TestMutagenize.results.csv  benchmark_base_ops.py  benchmark_base_ops.results.csv  benchmark_examples.py  benchmark_scan_ops.py  benchmark_utils.py  run_benchmarks.py  run_profile.py  test_memory.py  test_runtime.py  test_scalability.py  workloads.py
poolparty/benchmarks/profiles/: mutagenize.prof
poolparty/benchmarks/timing/: __init__.py  _utils.py  all.py  base_ops.py  dag_ops.py  examples.py  scan_ops.py  test_base_ops.py  test_dag_ops.py  test_examples.py  test_scan_ops.py
poolparty/docs/: conf.py  requirements.txt
poolparty/examples/: config_demo.py
poolparty/legacy/v0/legacy_poolparty/: __init__.py  barcode_pool.py  deletion_scan_orf_pool.py  deletion_scan_pool.py  design_cards.py  insertion_scan_orf_pool.py  insertion_scan_pool.py  iupac_pool.py  k_mutation_orf_pool.py  k_mutation_pool.py  kmer_pool.py  mixed_pool.py  motif_pool.py  orf_pool.py  pool.py  random_mutation_orf_pool.py  random_mutation_pool.py  shuffle_pool.py  shuffle_scan_pool.py  spacing_scan_pool.py  subseq_pool.py  utils.py  visualization.py
poolparty/legacy/v0/legacy_sandbox/:  25.10.25_claud_exampe.ipynb  25.10.25_oligo.py  25.10.25_poolparty.ipynb  25.10.26_poolparty_skeleton.py  25.10.27_testing.py  25.10.28_jbk_testing.py  25.10.29_deletion_scan_orf_demo.py  25.10.29_insertion_scan_orf_demo.py  25.10.29_jbk_orf_testing.py  25.10.29_random_mutation_orf_testing.py  OLD_poolparty_tutorial.ipynb
poolparty/legacy/v0/legacy_tests/: __init__.py  test_barcode_pool.py  test_composite_pools.py  test_deletion_scan_orf_pool.py  test_deletion_scan_pool.py  test_design_cards_complex_nesting.py  test_design_cards_integration.py  test_insertion_scan_orf_pool.py  test_insertion_scan_pool.py  test_integration.py  test_iupac_pool.py  test_k_mutation_orf_pool.py  test_k_mutation_pool.py  test_kmer_pool.py  test_metadata_levels.py  test_mixed_pool.py  test_motif_pool.py  test_motif_pool_orientation.py  test_orf_pool_integration.py  test_pool.py  test_random_mutation_orf_pool.py  test_random_mutation_pool.py  test_sequence_graph_complex_nesting.py  test_shuffle_pool.py  test_shuffle_scan_pool.py  test_spacing_scan_pool.py  test_stale_cache_regression.py  test_subseq_pool.py
poolparty/legacy/v1/: orf_operation.py
poolparty/legacy/v1/operations/: deletion_scan_op.py  get_barcodes_op.py  insertion_scan_op.py  multiinsertion_scan_op.py  mutagenize_op.py  shuffle_op.py  shuffle_scan_op.py  subseq_op.py
poolparty/legacy/v1/orf_operations/: __init__.py  orf_mutation_scan_op.py
poolparty/manuscript/: clean_latex.sh  main.tex  mam-authoring-template.cls  paper_contents.txt  reference.bib
poolparty/manuscript/joss_paper/: paper.bib  paper.tex
poolparty/manuscript/resources/: OLD_main.tex  contents.txt
poolparty/manuscript/template/: mam-authoring-template.tex  manifest.txt  readme.txt
poolparty/notebooks/: filtering_demo.ipynb
poolparty/src/poolparty/: __init__.py  alphabet.py  codon_table.py  config.py  default_config.toml  df_format.py  dna.py  dna_pool.py  generate_library.py  generate_seqs.py  highlighter.py  marker.py  operation.py  ops_container.py  orf.py  party.py  pool.py  protein_pool.py  region.py  seq_highlighter.py  seq_utils.py  style.py  style_utils.py  types.py  utils.py
poolparty/tests/: conftest.py  test_add_prefix.py  test_alphabet.py  test_annotate.py  test_breakpoint_scan.py  test_clear_seq_names.py  test_config.py  test_deletion_multiscan.py  test_deletion_scan.py  test_df_format.py  test_dna.py  test_export.py  test_filter.py  test_filter_methods.py  test_from_fasta.py  test_from_iupac.py  test_from_iupac_motif.py  test_from_motif.py  test_from_prob_motif.py  test_from_seq.py  test_from_seqs.py  test_get_kmers.py  test_hybrid_mode.py  test_inline_styles.py  test_insertion_scan.py  test_join.py  test_logging.py  test_marker_scan.py  test_markers.py  test_materialize.py  test_mutagenize.py  test_mutagenize_orf.py  test_mutagenize_using_rate.py  test_mutation_scan.py  test_name_tracking.py  test_num_states_override.py  test_operation.py  test_party.py  test_pool.py  test_random_num_states.py  (+27 more)
poolparty/tests/counter/: test_counter.py  test_counter_manager.py
statecounter/: README.md  pyproject.toml
statecounter/docs/: alternatives.ipynb  api.rst  concepts.ipynb  concepts.rst  conf.py  index.rst  motivation.ipynb  operations.ipynb  operations.rst  quickstart.ipynb  quickstart.rst  requirements.txt  tutorials.rst
statecounter/docs/tutorials/: 01_getting_started.ipynb
statecounter/joss_paper/: paper.bib  paper.md
statecounter/src/statecounter/: __init__.py  counter.py  imports.py  manager.py  operation.py  text_viz.py
statecounter/tests/: __init__.py  test_counter.py  test_counter_manager.py
statecounter/tests/ops/: __init__.py  test_multiply_op.py  test_product_op.py  test_repeat_op.py  test_sample_op.py  test_shuffle_op.py  test_slice_op.py  test_split_op.py  test_stack_op.py  test_synchronize_coop.py
statetracker/: .readthedocs.yaml  CHANGELOG.md  README.md  mirror_tutorials.sh  pyproject.toml
statetracker/docs/: Makefile  alternatives.ipynb  api.rst  concepts.ipynb  conf.py  index.rst  make.bat  motivation.ipynb  operations.ipynb  quickstart.ipynb  requirements.txt  synced_to.ipynb
statetracker/joss_paper/: 26.01.19_opus_critique.md  paper.md  statecounter.ai  statecounter_figs.ipynb  statetracker_figs.ipynb
statetracker/src/statetracker/: __init__.py  imports.py  manager.py  operation.py  state.py  sync_group.py  text_viz.py  utils.py
statetracker/tests/: conftest.py  test_state.py  test_state_manager.py
statetracker/tests/ops/: test_product_op.py  test_repeat_op.py  test_sample_op.py  test_shuffle_op.py  test_slice_op.py  test_split_op.py  test_stack_op.py  test_synchronize_coop.py
(+498 files in other folders)
