[project]
name = "poolparty-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "nbclient>=0.10.4",
    "poolparty",
    "statetracker",
]

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.uv.workspace]
members = ["poolparty", "statetracker"]

[tool.uv.sources]
poolparty = { workspace = true }
statetracker = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["poolparty/tests", "statetracker/tests"]
