[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poolparty"
version = "0.1.0"
description = "A Python package for generating oligonucleotide sequence pools"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Justin Kinney"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "beartype>=0.22.9",
    "statetracker",
    "pyfaidx>=0.8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/jbkinney/poolparty-statecounter"
Documentation = "https://poolparty.readthedocs.io"
Repository = "https://github.com/jbkinney/poolparty-statecounter/tree/main/poolparty"
Issues = "https://github.com/jbkinney/poolparty-statecounter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
