[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statecounter"
version = "0.1.0"
description = "Composable counters with unidirectional state propagation for enumerating combinatorial spaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Justin Kinney"},
]
keywords = [
    "counter",
    "combinatorics",
    "iteration",
    "state-machine",
    "enumeration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/jkinney/statecounter"
Documentation = "https://statecounter.readthedocs.io"
Repository = "https://github.com/jkinney/statecounter"
Issues = "https://github.com/jkinney/statecounter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
