[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statetracker"
version = "0.1.0"
description = "Composable states with unidirectional value propagation for enumerating combinatorial spaces"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Justin Kinney"},
]
keywords = [
    "state",
    "combinatorics",
    "iteration",
    "state-machine",
    "enumeration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "beartype>=0.22.9",
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]

[project.urls]
Homepage = "https://github.com/jbkinney/poolparty-statecounter"
Documentation = "https://statetracker.readthedocs.io"
Repository = "https://github.com/jbkinney/poolparty-statecounter/tree/main/statetracker"
Issues = "https://github.com/jbkinney/poolparty-statecounter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
